--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,10 @@
 .header {
-  background-color: black;
   font-family: "Raleway", sans-serif;
-  width: 1920px;
+  max-width: 1920px;
+  height: 900px;
+  background-image: url(/images/background.png);
+  max-width: auto;
+  margin: auto;
 }
 
 .header__left {
@@ -9,13 +12,13 @@
   gap: 40px;
 }
 
-.header__container {
+/* .header__container {
   display: flex;
   column-gap: 5px;
   align-items: center;
   justify-content: space-evenly;
   margin-top: 15px;
-}
+} */
 
 .header__right {
   display: flex;
@@ -54,5 +57,35 @@
 }
 
 ul {
-  gap: 50px;
+  gap: 30px;
+}
+
+.text {
+  display: flex;
+  justify-content: center;
+  margin-top: 300px;
+  font-size: 50px;
+  color: white;
+  font-family: "Raleway", sans-serif;
+}
+
+.line {
+  width: 120px;
+  height: 0px;
+  border: 0.5px solid;
+  color: white;
+  margin-top: 15px;
+  margin-left: 900px;
+}
+
+.text2 {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  font-size: 16px;
+  color: white;
+}
+
+.text2 img {
+  margin-left: 5px;
 }
