--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,14 @@ a {
   color: white;
 }
 
-body {
-  display: flex;
-  justify-content: center;
-
+/* main {
+  background: url(/images/background.png) no-repeat;
+  height: 1000px;
+  max-width: 1680px;
+  margin: auto;
 }
+
+body {
+  max-width: 1680px;
+  margin: auto;
+} */
