--- a/css/header.css
+++ b/css/header.css
@@ -7,18 +7,18 @@
   margin: auto;
 }
 
-.header__left {
+/* .header__left {
   display: flex;
   gap: 40px;
 }
 
-/* .header__container {
+.header__container {
   display: flex;
   column-gap: 5px;
   align-items: center;
   justify-content: space-evenly;
   margin-top: 15px;
-} */
+}
 
 .header__right {
   display: flex;
@@ -54,7 +54,7 @@
   display: flex;
   gap: 30px;
   margin-left: 100px;
-}
+} */
 
 ul {
   gap: 30px;
@@ -89,3 +89,63 @@ ul {
 .text2 img {
   margin-left: 5px;
 }
+
+.navmenu {
+  display: flex;
+  justify-content: center;
+}
+
+.categories {
+  margin-top: 100px;
+  font-size: 36px;
+  font-family: "Raleway", sans-serif;
+}
+
+.container__grid {
+  display: grid;
+  grid-template: repeat(1, 1fr) / repeat(4, 1fr);
+  margin-top: 50px;
+}
+
+.block1 {
+  position: absolute;
+  top: 1515px;
+  width: 274px;
+  height: 40px;
+  background-color: #E0BEA2BF;
+  
+}
+
+.grid__text1 {
+  color: white;
+  font-size: 20px;
+  font-family: "Raleway", sans-serif;
+  margin-left: 110px;
+  margin-top: 5px;
+}
+
+
+.grid__text2 {
+  color: white;
+  font-size: 20px;
+  font-family: "Raleway", sans-serif;
+  margin-left: 110px;
+  margin-top: 5px;
+}
+
+.grid__text3 {
+  color: white;
+  font-size: 20px;
+  font-family: "Raleway", sans-serif;
+  margin-left: 110px;
+  margin-top: 5px;
+}
+
+.grid__text4 {
+  color: white;
+  font-size: 20px;
+  font-family: "Raleway", sans-serif;
+  margin-left: 110px;
+  margin-top: 5px;
+}
+
