--- a/css/header.css
+++ b/css/header.css
@@ -7,54 +7,7 @@
   margin: auto;
 }
 
-/* .header__left {
-  display: flex;
-  gap: 40px;
-}
 
-.header__container {
-  display: flex;
-  column-gap: 5px;
-  align-items: center;
-  justify-content: space-evenly;
-  margin-top: 15px;
-}
-
-.header__right {
-  display: flex;
-  gap: 40px;
-}
-
-.header__navmenu {
-  display: flex;
-  gap: 40px;
-}
-
-.img1 {
-  width: 25px;
-  height: 25px;
-}
-
-.img2 {
-  width: 25px;
-  height: 25px;
-}
-
-.img3 {
-  width: 25px;
-  height: 25px;
-}
-
-.img4 {
-  width: 25px;
-  height: 25px;
-}
-
-.header__images {
-  display: flex;
-  gap: 30px;
-  margin-left: 100px;
-} */
 
 ul {
   gap: 30px;
@@ -107,6 +60,24 @@ ul {
   margin-top: 50px;
 }
 
+.switch__btn {
+  width: 40px;
+  height: 40px;
+  background-color: #E0BEA2;
+  position: absolute;
+  top: 1300px;
+  right: 370px;
+} 
+
+
+.switch__btn img {
+  width: 25px;
+  height: 25px;
+  margin-top: 7px;
+  margin-left: 9px;
+}
+
+
 .block1 {
   position: absolute;
   top: 1515px;
@@ -148,4 +119,3 @@ ul {
   margin-left: 110px;
   margin-top: 5px;
 }
-
